# streamlit-example

./: .gitignore  devenv.nix  devenv.yaml  pyproject.toml  requirements.txt  streamlit_app.py
