[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = "Streamlit example"
authors = ["NAME"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
altair = "^5.4.1"
pandas = "^2.2.2"
streamlit = "^1.38.0"
boto3 = "^1.35.11"

[tool.poetry.group.dev.dependencies]
mypy-boto3-ssm = "^1.35.0"
boto3-stubs = { extras = ["all"], version = "^1.29.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

exclude = [
    "**/node_modules",
    "**/__pycache__",
    "venv/",
    ".venv/"
]
